--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .idea/
+gear_finder/*.c
+gear_finder/*.html
+deps.tar.bz2
+temporary-captain-to-deploy.tar
 
 # Created by https://www.gitignore.io/api/python,pycharm
 # Edit at https://www.gitignore.io/?templates=python,pycharm
